--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@react-three/drei": "^8.8.1",
+    "@react-three/fiber": "^7.0.26",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "three": "^0.137.5",
+    "valtio": "^1.2.11"
   },
   "devDependencies": {
     "@types/react": "17.0.39",
+    "@types/three": "^0.137.0",
     "typescript": "4.5.5"
   }
 }
