--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "valtio": "^1.2.11"
   },
   "devDependencies": {
+    "@types/node": "^17.0.16",
     "@types/react": "17.0.39",
     "@types/three": "^0.137.0",
     "typescript": "4.5.5"
