--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.7.1",
     "@react-three/drei": "^8.8.1",
     "@react-three/fiber": "^7.0.26",
+    "lil-gui": "^0.16.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
